# precisionStudies

./: .gitignore  README.md
ddfun/: README.md  setup.sh  write_unit_tests.py
ddfun/cppPort/: CMakeLists.txt
ddfun/cppPort/src/: CMakeLists.txt  ddcomplex.cpp  ddcomplex.h  ddfuna_c.f90  ddmath.cpp  ddmath.h  ddouble.cpp  ddouble.h
ddfun/cppPort/unit_testing/: CMakeLists.txt  main.cpp  test_ddabs.h  test_ddacosh.h  test_ddadd.h  test_ddasinh.h  test_ddatanh.h  test_ddcadd.h  test_ddcdiv.h  test_ddcmul.h  test_ddcpwr.h  test_ddcsqrt.h  test_ddcsshr.h  test_ddcssnr.h  test_ddcsub.h  test_dddiv.h  test_dddivd.h  test_ddexp.h  test_ddlog.h  test_ddmul.h  test_ddmuld.h  test_ddmuldd.h  test_ddneg.h  test_ddnpwr.h  test_ddpolyr.h  test_ddpower.h  test_ddsqrt.h  test_ddsub.h
ddfun/cppPort/units/: CMakeLists.txt  test_main.cpp
ddfun/cudaPort/: cddmath.h  complexdd.h  ddmath.h  ddouble.cu  ddouble.h
ddfun/ddTestInputs/: gen_ddabs.py  gen_ddacosh.py  gen_ddadd.py  gen_ddasinh.py  gen_ddatanh.py  gen_ddcadd.py  gen_ddcdiv.py  gen_ddcmul.py  gen_ddcpwr.py  gen_ddcsqrt.py  gen_ddcsshr.py  gen_ddcssnr.py  gen_ddcsub.py  gen_dddiv.py  gen_dddivd.py  gen_ddexp.py  gen_ddlog.py  gen_ddmul.py  gen_ddmuld.py  gen_ddmuldd.py  gen_ddneg.py  gen_ddnint.py  gen_ddnpwr.py  gen_ddpolyr.py  gen_ddpower.py  gen_ddsqrt.py  gen_ddsub.py  generator.py  run_all_gen.sh
ddfun/ddfun-v03/: CMakeLists.txt  DISCLAIMER.txt  README-ddfun.txt
ddfun/ddfun-v03/fortran/: CMakeLists.txt  ddfuna.f90  ddfune.f90  ddmodule.f90  gnu-complib-dd.scr  gnu-complink-dd.scr  gnu-ddfun-tests.scr  testddfun.f90  testddfun.ref.txt  tpphixdd.f90  tpphixdd.ref.txt  tpslqm1dd.f90  tpslqm1dd.ref.txt  tquaddd.f90  tquaddd.ref.txt
ddfun/ddfun-v03/unit_testing/: CMakeLists.txt  main.f90  test_ddabs.f90  test_ddacosh.f90  test_ddasinh.f90  test_ddatanh.f90  test_ddcadd.f90  test_ddcdiv.f90  test_ddcmul.f90  test_ddcpwr.f90  test_ddcsqrt.f90  test_ddcsshr.f90  test_ddcssnr.f90  test_ddcsub.f90  test_dddiv.f90  test_ddexp.f90  test_ddlog.f90  test_ddmul.f90  test_ddmuld.f90  test_ddmuldd.f90  test_ddneg.f90  test_ddnpwr.f90  test_ddpolyr.f90  test_ddpower.f90  write_unit_tests.py
ddfun/ddfun-v03/unit_testing/python_generators/: gen_ddadd.py  gen_dddiv.py  gen_dddivd.py  gen_ddexp.py  gen_ddlog.py  gen_ddmul.py  gen_ddmuld.py  gen_ddmuldd.py  gen_ddnpwr.py  gen_ddpower.py  gen_ddsqrt.py  gen_ddsub.py
ddfun/ddfun-v03/unit_testing/tests/: test_ddadd.f90  test_dddivd.f90  test_ddmuld.f90  test_ddnpwr.f90  test_ddsqrt.f90  test_ddsub.f90
ddfun/kokkosPort/: CMakeLists.txt  kkcomp.txt  setup.sh  txt  unit_tests.cpp
ddfun/kokkosPort/src/: CMakeLists.txt  ddcomplex.hpp  ddmath.h  ddmath.hpp  ddouble.h  ddouble.hpp
ddfun/kokkosPort/unit_testing/: CMakeLists.txt  test_ddabs.h  test_ddacosh.h  test_ddadd.h  test_ddasinh.h  test_ddatanh.h  test_dddiv.h  test_dddivd.h  test_ddexp.h  test_ddlog.h  test_ddmul.h  test_ddmuld.h  test_ddsub.h
ddfun/kokkosPort/units/: CMakeLists.txt  unit_tests.cpp
